# CarND-term3-lesson5.27

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindIPOPT.cmake  FindLibUV.cmake  git.cmake  include_guard.cmake
src/: CMakeLists.txt  core.cpp  core.hpp  main.cpp
test/: CMakeLists.txt  core.test.cpp  main.cpp
